<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!--Header text for the list of toppings [CHAR LIMIT = 20] -->
    <string name="toppings">Toppings</string>

    <!--Name entry in order summary [CHAR LIMIT = 20] -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Arno">%s</xliff:g></string>
    <!--Thank you message in order summary [CHAR LIMIT = 20] -->
    <string name="thank__you">Thank you!</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="initial_quantity_value">1</string>
    <string name="order">Order</string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_email_subject">JustJava order to <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="plus_operator">+</string>
    <string name="minus_operator">-</string>
</resources>
